e10-gatewayapi-tls/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: foo-bar-gateway
  namespace: application
spec:
  gatewayClassName: nginx
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "esmfalcon.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: foo-gateway-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
