e10-gatewayapi-tls/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo-bar-route
  namespace: application
spec:
  parentRefs:
    - name: foo-bar-gateway
  hostnames:
    - "esmfalcon.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /foo
      backendRefs:
        - name: foo-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /bar
      backendRefs:
        - name: bar-service
          port: 8080
